[gd_scene load_steps=10 format=3 uid="uid://7ek4v54t1mef"]

[ext_resource type="Texture2D" uid="uid://cwrqr33v74vd8" path="res://elia & pablo.png" id="1_x0iwq"]
[ext_resource type="Script" uid="uid://bqsbp47vgss1a" path="res://control.gd" id="2_lkvtl"]
[ext_resource type="Texture2D" uid="uid://csuku0tchpb35" path="res://download.jpg" id="3_4mwvo"]
[ext_resource type="Texture2D" uid="uid://dkilubbu7wkd2" path="res://Fade-PNG-Photos.png" id="4_x72xx"]

[sub_resource type="Animation" id="Animation_kdubu"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ScreenFade:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_d21ai"]
resource_name = "fade out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ScreenFade:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_0hol4"]
resource_name = "fade_in"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ScreenFade:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_q6r6c"]
resource_name = "fade_out"
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ScreenFade:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 0,
"values": []
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kdubu"]
_data = {
&"RESET": SubResource("Animation_kdubu"),
&"fade out": SubResource("Animation_d21ai"),
&"fade_in": SubResource("Animation_0hol4"),
&"fade_out": SubResource("Animation_q6r6c")
}

[node name="Node2D" type="Node2D"]

[node name="Dagat" type="Sprite2D" parent="."]
position = Vector2(576.49994, 324.49997)
scale = Vector2(3.6031253, 3.6055558)
texture = ExtResource("1_x0iwq")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 8.0
offset_top = 4.0
offset_right = 1168.0
offset_bottom = 655.0
script = ExtResource("2_lkvtl")

[node name="DialogueBox" type="TextureRect" parent="Control"]
layout_mode = 0
offset_left = 41.0
offset_top = 503.0
offset_right = 1122.0
offset_bottom = 604.0

[node name="ReliconDialogueBox(1)" type="Sprite2D" parent="Control/DialogueBox"]
modulate = Color(1, 1, 1, 0.8235294)
position = Vector2(525.00006, 47.499977)
scale = Vector2(4.6933336, 0.6444444)
texture = ExtResource("3_4mwvo")

[node name="TextLabel" type="RichTextLabel" parent="Control/DialogueBox"]
layout_mode = 0
offset_left = 31.0
offset_top = 19.0
offset_right = 1023.0
offset_bottom = 116.0
theme_override_font_sizes/normal_font_size = 18
tab_size = 10

[node name="Control2" type="Control" parent="Control"]
anchors_preset = 0
offset_left = -8.0
offset_top = 3.0
offset_right = 1147.0
offset_bottom = 653.0

[node name="TextLabel1" type="RichTextLabel" parent="Control/Control2"]
layout_mode = 0
offset_left = 84.0
offset_top = 485.0
offset_right = 286.0
offset_bottom = 558.0
theme_override_font_sizes/normal_font_size = 25
theme_override_font_sizes/bold_font_size = 22

[node name="Fader" type="CanvasLayer" parent="Control/Control2"]

[node name="ScreenFade" type="ColorRect" parent="Control/Control2/Fader"]
anchors_preset = -1
anchor_left = 0.062000003
anchor_right = 0.062000003
offset_left = -83.424
offset_top = -21.0
offset_right = 1113.576
offset_bottom = 641.0
color = Color(0, 0, 0, 1)

[node name="anim" type="AnimationPlayer" parent="Control/Control2/Fader"]
libraries = {
&"": SubResource("AnimationLibrary_kdubu")
}
autoplay = "fade_in"

[node name="TheEndLabel" type="Label" parent="Control/Control2/Fader"]
z_index = 100
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -31.0
offset_top = -11.5
offset_right = 31.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 40
text = "The End"
horizontal_alignment = 1
vertical_alignment = 1

[node name="1" type="Sprite2D" parent="."]
position = Vector2(582.5, 555)
scale = Vector2(0.74155194, 0.5403587)
texture = ExtResource("4_x72xx")

[node name="4" type="Sprite2D" parent="."]
position = Vector2(599.20215, 62.847908)
rotation = 3.1300774
scale = Vector2(0.78255695, 0.5403587)
texture = ExtResource("4_x72xx")

[node name="2" type="Sprite2D" parent="."]
position = Vector2(1097.9036, 302.1034)
rotation = -1.5760452
scale = Vector2(0.4569468, 0.5403587)
texture = ExtResource("4_x72xx")

[node name="3" type="Sprite2D" parent="."]
position = Vector2(60.55957, 315.80457)
rotation = -4.7144074
scale = Vector2(0.44531175, 0.5403587)
texture = ExtResource("4_x72xx")
